video calls added

--- a/public/index.html
+++ b/public/index.html
@@ -40,5 +40,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="//sdk.twilio.com/js/video/releases/2.25.0/twilio-video.min.js"></script>
+    <script src="https://media.twiliocdn.com/sdk/js/conversations/releases/2.1.0/twilio-conversations.min.js"
+    integrity="sha256-v2SFLWujVq0wnwHpcxct7bzTP8wII7sumEhAKMEqgHQ="
+    crossorigin="anonymous"></script>
+   
+    <script src="../src/videoCalls.js"></script>
   </body>
+  
 </html>
