--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://sun9-80.userapi.com/impg/pjDIcOC2bAihJ-i4GgEz9J9JGsRdvNnmlSs9FA/-7oij3nCgHs.jpg?size=1088x1090&quality=95&sign=318fa35d38249734d4fe38c6808f01b2&type=album" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Zaletaika</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
